--- a/configs/story-writer.yaml
+++ b/configs/story-writer.yaml
@@ -1,8 +1,8 @@
 log_interval: 10
 dataset:
-  max_length: 128
+  batch_size: 32
 model:
-  d_model: 768
-  d_t: 768
-  n_layers: 12
-  n_heads: 12
+  d_model: 512
+  d_t: 256
+  n_layers: 8
+  n_heads: 8
