--- a/configs/story-writer.yaml
+++ b/configs/story-writer.yaml
@@ -1,8 +1,9 @@
-log_interval: 10
+log_interval: 100
 dataset:
-  batch_size: 32
+  max_length: 256
+  batch_size: 60
 model:
-  d_model: 512
-  d_t: 256
-  n_layers: 8
-  n_heads: 8
+  d_model: 768
+  d_t: 384
+  n_layers: 12
+  n_heads: 12
